--- a/portfolio.html
+++ b/portfolio.html
@@ -235,9 +235,9 @@
     </ul><br>
 
     <h2>Contact</h2>
-    <p class="contact-info">Email: <a href="mailto:oswaldamoah00@gmail.com">oswaldamoah00@gmail.com</a></p>
-    <p class="contact-info">LinkedIn: <a href="https://www.linkedin.com/in/oswald-amoah" target="_blank">linkedin.com/in/oswald-amoah</a></p>
-    <p class="contact-info">More: <a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
+    <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com">oswaldamoah00@gmail.com</a></p>
+    <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswald-amoah" target="_blank">linkedin.com/in/oswald-amoah</a></p>
+    <p class="contact-info"><strong>More: </strong> <a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
 </div>
 
 </body>
