--- a/portfolio.html
+++ b/portfolio.html
@@ -15,27 +15,28 @@
             text-align: center;
             color: #2c3e50;
             font-size: 2.5em;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
         }
         h3 {
             text-align: center;
             color: #34495e;
-            margin: 10px 0 30px 0;
+            margin: 5px 0 10px 0;
         }
         h2 {
             color: #34495e;
             border-bottom: 2px solid #1abc9c;
             padding-bottom: 5px;
-            margin-top: 30px;
+            margin-top: 15px;
+            margin-bottom: 5px;
         }
         h4 {
             color: #2c3e50;
-            margin: 15px 0 10px 0;
+            margin: 5px 0 5px 0;
             transition: transform 0.3s;
         }
         h4:hover {
-            transform: scale(1.03);
+            transform: scale(1.01);
             color: #1abc9c;
         }
         ul {
@@ -47,7 +48,7 @@
             margin-left: 20px;
         }
         li {
-            margin-bottom: 8px;
+            margin-bottom: 5px;
         }
         .container {
             max-width: 900px;
@@ -58,7 +59,7 @@
             border-radius: 8px;
         }
         .contact-info {
-            margin-top: 20px;
+            margin-top: 10px;
             font-style: italic;
         }
         .fade-in {
@@ -79,7 +80,7 @@
             }
         }
         .experience-block {
-            margin-bottom: 30px;
+            margin-bottom: 5px;
         }
         .timeline {
             color: #1abc9c;
@@ -93,89 +94,60 @@
     <h1>Oswald Amoah</h1>
     <h3>Professional Portfolio</h3>
 
-    <h2>About Me</h2>
-    <p>I am Oswald Amoah, a results-oriented tech freelancer with a strong background in technology and management.<br> My leadership abilities are evident in my previous roles such as IT Department Head, SWE Team Lead, and Data Management Specialist.<br> I'm currently pursuing a BSc. in Computer Science at the University of Ghana, and I am eager to apply my skills to solve real-world problems.</p>
+    <h2>Profile Summary</h2>
+    <p>I am Oswald Amoah, a results-oriented freelancer with a strong background in technology and management.<br> My leadership abilities are evident in my previous roles such as IT Department Head, SWE Team Lead, and Data Management Specialist.<br> I'm currently pursuing a BSc. in Computer Science at the University of Ghana, and I am eager to apply my skills to solve more real-world problems.</p>
 
     <h2>Education</h2>
     <ul>
-        <li><strong>University of Ghana</strong> - BSc. Computer Science <span class="timeline">(Class of 2026)</span></li>
-        <li><strong>Ghana Christian International High School</strong> - High School Diploma <span class="timeline">(2019-2022)</span></li>
+        <li><strong>University of Ghana <span class="timeline">(Class of 2026)</span></strong> <br/>BSc. Computer Science </li>
+        <li><strong>Ghana Christian International High School <span class="timeline">(2019-2022)</span></strong> <br/> High School Diploma (GPA: 3.30)<br/>Scholastic Aptitude Test (Score: 1360)<br/><a href="https://www.credly.com/badges/8e398e1c-1042-4fcc-b730-8d5af5a4846b/public_url" target="_blank">IC3 Digital Literacy Certification</a> </li>
     </ul>
 
-    <h2>Skills</h2>
-    <ul>
-        <li><strong>Microsoft Office Suite:</strong> Word, Excel, PowerPoint, OneDrive</li>
-        <li><strong>Google Workspace:</strong> Docs, Sheets, Slides, Drive</li>
-        <li><strong>Project Management Tools:</strong> Trello, Jira</li>
+    <h2>Technical Skills</h2>
+    <ul> 
+        <li><strong>Agile Project Management:</strong> Trello, Jira</li>
         <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS</li>
         <li><strong>Mobile App Development:</strong> ReactNative</li>
-        <li><strong>Agile Problem Solving &amp; Critical Thinking</strong></li>
-        <li><strong>Research &amp; Analysis Methods</strong></li>
+        <li><strong>Microsoft Office Suite:</strong> Word, Excel, PowerPoint, OneDrive</li>
+        <li><strong>Google Workspace:</strong> Docs, Sheets, Slides, Drive</li>
+        <li><strong>Research &amp; Analytical Methods</strong></li>
     </ul>
 
     <h2>Experience</h2>
 
     <div class="experience-block">
         <h4>Data Management Specialist - Ghana Christian International High School <span class="timeline">(2020-2022)</span></h4>
-        <ul class="bullet-list">
-            <li>Led a team of 20+ in handling PowerPoint presentations and graphic design for events.</li>
-            <li>Managed inventory and record keeping for school hardware such as speakers, mixers, and cables.</li>
-            <li>Conducted training sessions for team members to improve efficiency and performance.</li>
-        </ul>
+        <p>I led a team of over 20 members, handling PowerPoint presentations and graphic design for events. My role included managing inventory and record-keeping for school hardware like speakers, mixers, and cables. Additionally, I conducted training sessions to enhance team efficiency and performance.</p>
     </div>
 
     <div class="experience-block">
         <h4>IT Department Head - Flourishing Field International Ministries <span class="timeline">(2021-2024)</span></h4>
-        <ul class="bullet-list">
-            <li>Led a team of 15+ in managing PowerPoint presentations, graphic design, and video projections for events.</li>
-            <li>Trained team members to handle tasks such as audio-visual management and data handling.</li>
-            <li>Created a member management system that improved communication and data security, increasing productivity by 40%.</li>
-            <li>Managed bulk automated messaging and communication for over 500 members.</li>
-        </ul>
+        <p>As IT Department Head, I led a team of 15+ in managing event presentations, graphic design, and video projections. I developed a member management system that improved communication and data security, boosting productivity by 40%. I also handled bulk automated messaging for over 500 members and trained team members in audio-visual and data management tasks.</p>
     </div>
 
     <div class="experience-block">
         <h4>Web &amp; App Development Intern - El Cuto Consult <span class="timeline">(2023)</span></h4>
-        <ul class="bullet-list">
-            <li>Learned and applied USSD services for mobile interactions.</li>
-            <li>Contributed to updating the company website and worked on various components of client applications.</li>
-        </ul>
+        <p>During my internship, I learned and implemented USSD services for mobile interactions. I contributed to updating the company website and worked on various components of client applications.</p>
     </div>
 
     <div class="experience-block">
         <h4>Project Manager &amp; SWE Team Lead - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
-        <ul class="bullet-list">
-            <li>I lead a diverse team of frontend, backend, UI/UX developers, documentation specialists, and QA engineers.</li>
-            <li>I manage project timelines using Trello, breaking down tasks into smaller sprints for agile development.</li>
-            <li>I successfully completed several console-based and full-stack projects, including a Data Structures Program and Map Routing Program.</li>
-        </ul>
+        <p>I lead a diverse team of frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers. Using Trello, I manage project timelines and break tasks into smaller sprints for agile development. My team has successfully completed several console-based and full-stack projects, including a Data Structures Program and a Map Routing Program.</p>
     </div>
 
     <div class="experience-block">
         <h4>Data Mgt. &amp; Research Freelancer <span class="timeline">(2023 - Present)</span></h4>
-        <ul class="bullet-list">
-            <li>I utilize my range of skills to provide high-quality deliverables for clients.</li>
-            <li>I provide consistent feedback to clients at every stage of the project to ensure satisfaction.</li>
-            <li>I document necessary requirements to streamline project execution.</li>
-        </ul>
+        <p>As a freelancer, I leverage my skills to deliver high-quality results for clients. I maintain consistent communication to ensure client satisfaction and document project requirements to streamline execution.</p>
     </div>
 
     <div class="experience-block">
-        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline"><br/>(Dec. 2024 - Present)</span></h4>
-        <ul class="bullet-list">
-            <li>I transcribe and summarize key points from project meetings to improve team objectives.</li>
-            <li>I assist in the update of detailed user stories, workflows, and software architecture for ongoing projects.</li>
-            <li>I develop technical reports to guide the implementation and maintenance of software solutions.</li>
-        </ul>
+        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Dec. 2024 - Present)</span></h4>
+        <p>I transcribe and summarize key points from project meetings to improve team objectives. My responsibilities include updating user stories, workflows, and software architecture, as well as developing technical reports to guide software implementation and maintenance.</p>
     </div>
-    
+
     <div class="experience-block">
-        <h4>Member - Projects & Planning Committee, African Union Hall, Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
-        <ul class="bullet-list">
-            <li>I participate event planning and project timeline development, ensuring smooth execution of hall projects and activities.</li>
-            <li>My committee collaborates with specific committees to ensure timely delivery of their roles and responsibilities.</li>
-            <li>I play an active role in resolving challenges during project execution to meet deadlines and objectives.</li>
-        </ul>
+        <h4>Member - Projects &amp; Planning Committee, African Union Hall, Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
+        <p>As a committee member, I assist in event planning and project timeline development to ensure smooth execution of hall activities. I collaborate with other committees to ensure timely delivery of their roles and resolve challenges during project execution to meet deadlines and objectives.</p>
     </div>
 
     <h2>Key Projects</h2>
@@ -213,7 +185,7 @@
     <h3>Web Development</h3>
     <h4>Volunteer Projects</h4>
     <ul>
-        <li>Member Management System (MMS) - FFIM</li>
+        <li>Member Management System (MMS) Web App - FFIM</li>
         <li>Website for UG Department of Computer Science</li>
     </ul>
     <h4>Academic Projects</h4>
@@ -223,7 +195,6 @@
     <h4>Personal Projects</h4>
     <ul>
         <li>Expenses Tracker Web App</li>
-        <li>To-Do Web App</li>
         <li>Donations Management Web App</li>
     </ul><br>
 
@@ -231,21 +202,14 @@
 
     <h4>Personal Projects</h4>
     <ul>
-        <li>Expense Tracking Mobile App (React Native)</li>
+        <li>Shopping Mobile App using API (React Native)</li>
+        <li>Smart Restaurant Menu (React Native)</li>
     </ul><br>
 
     <h2>Contact</h2>
-    <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com">oswaldamoah00@gmail.com</a></p>
-    <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswald-amoah" target="_blank">linkedin.com/in/oswald-amoah</a></p>
-    <p class="contact-info"><strong>More: </strong> <a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
+    <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com" target="_blank">oswaldamoah00@gmail.com</a></p>
+    <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswaldamoah" target="_blank">linkedin.com/in/oswald-amoah</a></p>
+    <p class="contact-info"><strong>Portfolio: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
 </div>
-
 </body>
-<script>
-    // Get the current year
-    const currentYear = new Date().getFullYear();
-
-    // Set the data-year attribute to the current year
-    document.body.setAttribute('data-year', currentYear);
-  </script>
 </html>
