--- a/portfolio.html
+++ b/portfolio.html
@@ -83,9 +83,14 @@
             margin-bottom: 5px;
         }
         .timeline {
-            color: #1abc9c;
-            font-weight: bold;
-        }
+    color: #1abc9c;
+    font-weight: bold;
+    white-space: nowrap; /* Prevents wrapping */
+    overflow: hidden;    /* Hides overflow content */
+    text-overflow: ellipsis; /* Adds ellipsis for overflow text */
+    max-width: 100%;     /* Ensures it doesn't exceed container width */
+            }
+
     </style>
 </head>
 <body data-year="">
@@ -141,48 +146,39 @@
     </div>
 
     <div class="experience-block">
-        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Dec. 2024 - Present)</span></h4>
-        <p>I transcribe and summarize key points from project meetings to improve team objectives. My responsibilities include updating user stories, workflows, and software architecture, as well as developing technical reports to guide software implementation and maintenance.</p>
-    </div>
-
-    <div class="experience-block">
         <h4>Member - Projects &amp; Planning Committee, African Union Hall, Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
         <p>As a committee member, I assist in event planning and project timeline development to ensure smooth execution of hall activities. I collaborate with other committees to ensure timely delivery of their roles and resolve challenges during project execution to meet deadlines and objectives.</p>
     </div>
 
+    <div class="experience-block">
+        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Dec. 2024 - Present)</span></h4>
+        <p>I transcribe and summarize key points from project meetings to improve team objectives. My responsibilities include updating user stories, workflows, and software architecture, as well as developing technical reports to guide software implementation and maintenance.</p>
+    </div>
+
     <h2>Key Projects</h2>
 
-    <h3>Data &amp; Management</h3>
+    <h3>Project Management &amp; Research</h3>
     <h4>Volunteer Projects</h4>
     <ul>
-        <li>Rabbit Farming Record Keeping &amp; Cashflow Template</li>
-        <li>Product Backlog - MMS</li>
-    </ul>
-    <h4>Freelance Projects</h4>
-    <ul>
-        <li>Exam Question Bank Compilation - CCHN Winneba</li>
-        <li>Emancipation Summit Registration Database - RLMI</li>
-        <li>Cashflow, Invoice &amp; Fuel Logs Management Template - JA Rentals</li>
-        <li>Receipt &amp; Payment Logs Management Template - Barima Events</li>
-    </ul>
-    <h4>Academic Project</h4>
-    <ul>
-        <li>MS Office Capstone Project (Word, Excel, PowerPoint)</li>
-    </ul><br>
-
-    <h3>Research</h3>
-    <h4>Volunteer Projects</h4>
-    <ul>
-        <li>MMS Product Analysis</li>
+        <li>Product Backlog - MMS with BitByBitDevs</li>
+        <li>MMS Product Analysis with BitByBitDevs</li>
+        <li>Rabbit Farming Record Keeping &amp; Cashflow Management</li>
         <li>Rabbit Farming Industry Analysis</li>
     </ul>
     <h4>Freelance Projects</h4>
     <ul>
-        <li>Shampoo Market Research &amp; Lead Generation (Ghana)</li>
-        <li>Amaranth &amp; Squalene Market Research &amp; Lead Generation (Ghana)</li>
+        <li>Shampoo Market Research &amp; Lead Generation (Remote)</li>
+        <li>Amaranth &amp; Squalene Market Research &amp; Lead Generation (Remote)</li>
+        <li>Emancipation Summit Registration Database (Ghana)</li>
+        <li>Cashflow, Invoice &amp; Fuel Logs Management (Ghana)</li>
+        <li>Payment Logs &amp; Cash Receipt  Management (Ghana)</li>
+    </ul>
+    <h4>Academic Projects</h4>
+    <ul>
+        <li>MSOffice & Google Workspace Capstone Projects</li>
     </ul><br>
 
-    <h3>Web Development</h3>
+    <h3>Web & Mobile App Development</h3>
     <h4>Volunteer Projects</h4>
     <ul>
         <li>Member Management System (MMS) Web App - FFIM</li>
@@ -195,15 +191,12 @@
     <h4>Personal Projects</h4>
     <ul>
         <li>Expenses Tracker Web App</li>
-        <li>Donations Management Web App</li>
+        <li>Donations Management Web Application</li>
+        <li>API-Integrated Shopping Mobile App</li>
+        <li>Smart Restaurant Menu</li>
     </ul><br>
-
-    <h3>Mobile App Development</h3>
-
-    <h4>Personal Projects</h4>
     <ul>
-        <li>Shopping Mobile App using API (React Native)</li>
-        <li>Smart Restaurant Menu (React Native)</li>
+        
     </ul><br>
 
     <h2>Contact</h2>
