--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Portfolio - Oswald Amoah</title>
+    <title>Oswald Amoah | Resume</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -97,7 +97,7 @@
 
 <div class="container fade-in">
     <h1>Oswald Amoah</h1>
-    <h3>Professional Portfolio</h3>
+    <h3>Resume</h3>
 
     <h2>Profile Summary</h2>
     <p>I am Oswald Amoah, a results-oriented freelancer with a strong background in technology and management.<br> My leadership abilities are evident in my previous roles such as IT Department Head, SWE Team Lead, and Data Management Specialist.<br> I'm currently pursuing a BSc. in Computer Science at the University of Ghana, and I am eager to apply my skills to solve more real-world problems.</p>
@@ -111,7 +111,7 @@
     <h2>Technical Skills</h2>
     <ul> 
         <li><strong>Agile Project Management:</strong> Trello, Jira</li>
-        <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS</li>
+        <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS, SQL</li>
         <li><strong>Mobile App Development:</strong> ReactNative</li>
         <li><strong>Microsoft Office Suite:</strong> Word, Excel, PowerPoint, OneDrive</li>
         <li><strong>Google Workspace:</strong> Docs, Sheets, Slides, Drive</li>
@@ -121,28 +121,25 @@
     <h2>Experience</h2>
 
     <div class="experience-block">
-        <h4>Data Management Specialist - Ghana Christian International High School <span class="timeline">(2020-2022)</span></h4>
-        <p>I led a team of over 20 members, handling PowerPoint presentations and graphic design for events. My role included managing inventory and record-keeping for school hardware like speakers, mixers, and cables. Additionally, I conducted training sessions to enhance team efficiency and performance.</p>
+        <h4>Technical Team Lead - Flourishing Field International Ministries <span class="timeline">(2020 - Present)</span></h4>
+        <p>As the team lead, I led a team of 15+ in managing event presentations, graphic design, and video projections. I developed a member management system that improved communication and data security, boosting productivity by 40%. I also handled bulk automated messaging for over 500 members and trained team members in audio-visual and data management tasks.</p>
     </div>
 
     <div class="experience-block">
-        <h4>IT Department Head - Flourishing Field International Ministries <span class="timeline">(2021-2024)</span></h4>
-        <p>As IT Department Head, I led a team of 15+ in managing event presentations, graphic design, and video projections. I developed a member management system that improved communication and data security, boosting productivity by 40%. I also handled bulk automated messaging for over 500 members and trained team members in audio-visual and data management tasks.</p>
-    </div>
-
-    <div class="experience-block">
-        <h4>Web &amp; App Development Intern - El Cuto Consult <span class="timeline">(2023)</span></h4>
-        <p>During my internship, I learned and implemented USSD services for mobile interactions. I contributed to updating the company website and worked on various components of client applications.</p>
-    </div>
-
-    <div class="experience-block">
-        <h4>Project Manager &amp; SWE Team Lead - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
-        <p>I lead a diverse team of frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers. Using Trello, I manage project timelines and break tasks into smaller sprints for agile development. My team has successfully completed several console-based and full-stack projects, including a Data Structures Program and a Map Routing Program.</p>
-    </div>
-
-    <div class="experience-block">
-        <h4>Data Mgt. &amp; Research Freelancer <span class="timeline">(2023 - Present)</span></h4>
+        <h4>Freelancer | Data Management &amp; Research - UpWork <span class="timeline">(2023 - Present)</span></h4>
         <p>As a freelancer, I leverage my skills to deliver high-quality results for clients. I maintain consistent communication to ensure client satisfaction and document project requirements to streamline execution.</p>
+    </div>
+
+    <div class="experience-block">
+        <h4>Project Manager - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
+        <p>I lead a diverse team of frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers. Using Trello, I manage project timelines and break tasks into smaller sprints for agile development. My team has successfully completed several console-based and full-stack projects, including a school database and a map routing service.</p>
+    </div>
+
+
+
+    <div class="experience-block">
+        <h4>Web &amp; App Development Intern - El Cuto Consult <span class="timeline">(2024)</span></h4>
+        <p>During my internship, I learnt and implemented USSD services for mobile interactions and ASP.NET CORE for building robust applications. I contributed to updating the company website and worked on various components of client applications.</p>
     </div>
 
     <div class="experience-block">
@@ -160,10 +157,8 @@
     <h3>Project Management &amp; Research</h3>
     <h4>Volunteer Projects</h4>
     <ul>
-        <li>Product Backlog - MMS with BitByBitDevs</li>
-        <li>MMS Product Analysis with BitByBitDevs</li>
-        <li>Rabbit Farming Record Keeping &amp; Cashflow Management</li>
-        <li>Rabbit Farming Industry Analysis</li>
+        <li>MMS Product Backlog & Analysis</li>
+        <li>Rabbit Farming Record Management & Industry Analysis</li>
     </ul>
     <h4>Freelance Projects</h4>
     <ul>
@@ -201,7 +196,7 @@
 
     <h2>Contact</h2>
     <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com" target="_blank">oswaldamoah00@gmail.com</a></p>
-    <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswaldamoah" target="_blank">linkedin.com/in/oswald-amoah</a></p>
+    <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswaldamoah" target="_blank">linkedin.com/in/oswaldamoah</a></p>
     <p class="contact-info"><strong>Portfolio: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
 </div>
 </body>
