--- a/portfolio.html
+++ b/portfolio.html
@@ -121,8 +121,13 @@
     <h2>Experience</h2>
 
     <div class="experience-block">
-        <h4>Technical Team Lead - Flourishing Field International Ministries <span class="timeline">(2020 - Present)</span></h4>
-        <p>As the team lead, I led a team of 15+ in managing event presentations, graphic design, and video projections. I developed a member management system that improved communication and data security, boosting productivity by 40%. I also handled bulk automated messaging for over 500 members and trained team members in audio-visual and data management tasks.</p>
+        <h4>Technical Team Lead - Flourishing Field International <span class="timeline">(2020 - Present)</span></h4>
+        <p>As the team lead, I led a team of 15+ in managing data, records, and audio-visuals. We developed a member management system that improved communication and data security, boosting our team's productivity by 40%. I also handled bulk automated messaging for over 500 members and trained team members with data management skills.</p>
+    </div>
+
+    <div class="experience-block">
+        <h4>Project Manager - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
+        <p>I lead a diverse team of frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers. Using Trello, I manage project timelines and break tasks into smaller sprints for agile development. My team has successfully completed several console-based and full-stack projects, including a school database and a map routing service.</p>
     </div>
 
     <div class="experience-block">
@@ -131,30 +136,25 @@
     </div>
 
     <div class="experience-block">
-        <h4>Project Manager - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
-        <p>I lead a diverse team of frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers. Using Trello, I manage project timelines and break tasks into smaller sprints for agile development. My team has successfully completed several console-based and full-stack projects, including a school database and a map routing service.</p>
-    </div>
-
-
-
-    <div class="experience-block">
         <h4>Web &amp; App Development Intern - El Cuto Consult <span class="timeline">(2024)</span></h4>
         <p>During my internship, I learnt and implemented USSD services for mobile interactions and ASP.NET CORE for building robust applications. I contributed to updating the company website and worked on various components of client applications.</p>
     </div>
 
     <div class="experience-block">
-        <h4>Member - Projects &amp; Planning Committee, African Union Hall, Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
-        <p>As a committee member, I assist in event planning and project timeline development to ensure smooth execution of hall activities. I collaborate with other committees to ensure timely delivery of their roles and resolve challenges during project execution to meet deadlines and objectives.</p>
-    </div>
-
-    <div class="experience-block">
-        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Dec. 2024 - Present)</span></h4>
+        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Oct. 2024 - Present)</span></h4>
         <p>I transcribe and summarize key points from project meetings to improve team objectives. My responsibilities include updating user stories, workflows, and software architecture, as well as developing technical reports to guide software implementation and maintenance.</p>
     </div>
 
+    <div class="experience-block">
+        <h4>Member - Projects &amp; Planning Committee, African Union Hall, Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
+        <p>As a committee member, I contribute to event planning and project timeline development to ensure seamless execution. I collaborate with other committees to ensure timely delivery of their roles and resolve challenges during project execution to meet deadlines and objectives.</p>
+    </div>
+
+
+
     <h2>Key Projects</h2>
 
-    <h3>Project Management &amp; Research</h3>
+    <h3>Data Management &amp; Research</h3>
     <h4>Volunteer Projects</h4>
     <ul>
         <li>MMS Product Backlog & Analysis</li>
@@ -176,15 +176,14 @@
     <h3>Web & Mobile App Development</h3>
     <h4>Volunteer Projects</h4>
     <ul>
-        <li>Member Management System (MMS) Web App - FFIM</li>
+        <li>Member Management System (MMS) - FFI </li>
         <li>Website for UG Department of Computer Science</li>
     </ul>
-    <h4>Academic Projects</h4>
-    <ul>
-        <li>Student Grade Report Web App</li>
-    </ul>
+
     <h4>Personal Projects</h4>
     <ul>
+        <li>Student Grade Report Web App</li>
+        <li>Physical Queue Analysis Service</li>
         <li>Expenses Tracker Web App</li>
         <li>Donations Management Web Application</li>
         <li>API-Integrated Shopping Mobile App</li>
