--- a/portfolio.html
+++ b/portfolio.html
@@ -110,9 +110,11 @@
 
     <h2>Technical Skills</h2>
     <ul> 
-        <li><strong>Agile Project Management:</strong> Trello, Jira</li>
-        <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS, SQL</li>
+        <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS, <br> ASP.NET Core, SQL, AWS, API Development.</li>
         <li><strong>Mobile App Development:</strong> ReactNative</li>
+        <li><strong>Languages:</strong> C#, C++, Python, Javascript, Java</li>
+        <br>
+        <li><strong>Agile Project Management:</strong> Trello, Jira</li>
         <li><strong>Microsoft Office Suite:</strong> Word, Excel, PowerPoint, OneDrive</li>
         <li><strong>Google Workspace:</strong> Docs, Sheets, Slides, Drive</li>
         <li><strong>Research &amp; Analytical Methods</strong></li>
