--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </div>
 
     <div class="experience-block">
-        <h4>Project Manager - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
-        <p>I lead a diverse team of frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers. Using Trello, I manage project timelines and break tasks into smaller sprints for agile development. My team has successfully completed several console-based and full-stack projects, including a school database and a map routing service.</p>
+        <h4>Fullstack Developer - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
+        <p>I work with frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers, to build high-performance solutions. Skilled in the MERN stack, I contribute to scalable and intuitive applications. My work includes developing a Smart Menu system and a Specialized Map Routing Service, focusing on seamless user experience and efficient functionality while maximizing productivity.</p>
     </div>
 
     <div class="experience-block">
@@ -148,8 +148,8 @@
     </div>
 
     <div class="experience-block">
-        <h4>Member - Projects &amp; Planning Committee, African Union Hall, Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
-        <p>As a committee member, I contribute to event planning and project timeline development to ensure seamless execution. I collaborate with other committees to ensure timely delivery of their roles and resolve challenges during project execution to meet deadlines and objectives.</p>
+        <h4>SWE Intern | Headstarter AI Ghana<span class="timeline">(Nov. 2024 - Present)</span></h4>
+        <p>I focus on software development while gaining hands-on experience in AI implementation. With the flexibility to work on my own projects, I leverage their support to refine my skills and contribute to impactful solutions.</p>
     </div>
 
 
