--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
 
     <div class="experience-block">
-        <h4>SWE Intern | Headstarter AI Ghana<span class="timeline">(Nov. 2024 - Present)</span></h4>
+        <h4>Intern - Headstarter AI Ghana<span class="timeline">(Nov. 2024 - Present)</span></h4>
         <p>I focus on software development while gaining hands-on experience in AI implementation. With the flexibility to work on my own projects, I leverage their support to refine my skills and contribute to impactful solutions.</p>
     </div>
 
