--- a/index.html
+++ b/index.html
@@ -127,30 +127,32 @@
         <p>As the team lead, I led a team of 15+ in managing data, records, and audio-visuals. We developed a member management system that improved communication and data security, boosting our team's productivity by 40%. I also handled bulk automated messaging for over 500 members and trained team members with data management skills.</p>
     </div>
 
-    <div class="experience-block">
-        <h4>Fullstack Developer - BitByBit Developers <span class="timeline">(2023 - Present)</span></h4>
-        <p>I work with frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers, to build high-performance solutions. Skilled in the MERN stack, I contribute to scalable and intuitive applications. My work includes developing a Smart Menu system and a Specialized Map Routing Service, focusing on seamless user experience and efficient functionality while maximizing productivity.</p>
-    </div>
-
-    <div class="experience-block">
+      <div class="experience-block">
         <h4>Freelancer | Data Management &amp; Research - UpWork <span class="timeline">(2023 - Present)</span></h4>
         <p>As a freelancer, I leverage my skills to deliver high-quality results for clients. I maintain consistent communication to ensure client satisfaction and document project requirements to streamline execution.</p>
-    </div>
+     </div>
 
+    <div class="experience-block">
+        <h4>Fullstack Developer - BitByBit Developers <span class="timeline">(2023 - 2024)</span></h4>
+        <p>I worked with frontend, backend, and UI/UX developers, as well as documentation specialists and QA engineers, to build high-performance solutions. Skilled in the MERN stack, I contributed to scalable and intuitive applications. My work included developing a Specialized Map Routing Service, focusing on seamless user experience and efficient functionality while maximizing productivity.</p>
+    </div>
+    
+    <div class="experience-block">
+        <h4>Intern - Headstarter AI Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
+        <p>I focus on software development while gaining hands-on experience in AI implementation. With the flexibility to work on my own projects, I leverage their support to refine my skills and contribute to impactful solutions.</p>
+   </div>
+  
     <div class="experience-block">
         <h4>Web &amp; App Development Intern - El Cuto Consult <span class="timeline">(2024)</span></h4>
         <p>During my internship, I learnt and implemented USSD services for mobile interactions and ASP.NET CORE for building robust applications. I contributed to updating the company website and worked on various components of client applications.</p>
     </div>
 
     <div class="experience-block">
-        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Oct. 2024 - Present)</span></h4>
+        <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Oct. 2024 - Dec. 2024)</span></h4>
         <p>I transcribe and summarize key points from project meetings to improve team objectives. My responsibilities include updating user stories, workflows, and software architecture, as well as developing technical reports to guide software implementation and maintenance.</p>
     </div>
 
-    <div class="experience-block">
-        <h4>Intern - Headstarter AI Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
-        <p>I focus on software development while gaining hands-on experience in AI implementation. With the flexibility to work on my own projects, I leverage their support to refine my skills and contribute to impactful solutions.</p>
-    </div>
+    
 
 
 
