--- a/index.html
+++ b/index.html
@@ -182,18 +182,17 @@
     <h3>Web & Mobile App Development</h3>
     <h4>Volunteer Projects</h4>
     <ul>
-        <li>Member Management System (MMS) - FFI </li>
-        <li>Website for UG Department of Computer Science</li>
+        <li>Member Management Service (MMS) - FFI https://github.com/oswaldamoah/mms</li>
+        <li>Website for UG Department of Computer Science - http://github.com/oswaldamoah/11046928_DCIT_205_IA</li>
     </ul>
 
     <h4>Personal Projects</h4>
     <ul>
-        <li>Student Grade Report Web App</li>
-        <li>Physical Queue Analysis Service</li>
-        <li>Expenses Tracker Web App</li>
-        <li>Donations Management Web Application</li>
-        <li>API-Integrated Shopping Mobile App</li>
-        <li>Smart Restaurant Menu</li>
+       <li>Queue Management Embedded System: https://github.com/oswaldamoah/q-mgmt</li>
+        <li>Student Grade Report Web App https://github.com/oswaldamoah/UG-GradeReport</li>
+        <li>Expenses Tracker Web App: https://github.com/oswaldamoah/expensetracker</li>
+        <li>API-Integrated Shopping App : https://github.com/oswaldamoah/shopping-mobileapp</li>
+        <li>Smart Restaurant Menu App: https://github.com/MichaelAdadey/didiyie</li>        
     </ul><br>
     <ul>
         
