--- a/index.html
+++ b/index.html
@@ -188,12 +188,14 @@
 
     <h4>Personal Projects</h4>
     <ul>
-       <li>Queue Management Embedded System: https://github.com/oswaldamoah/q-mgmt</li>
-        <li>Student Grade Report Web App https://github.com/oswaldamoah/UG-GradeReport</li>
-        <li>Expenses Tracker Web App: https://github.com/oswaldamoah/expensetracker</li>
-        <li>API-Integrated Shopping App : https://github.com/oswaldamoah/shopping-mobileapp</li>
-        <li>Smart Restaurant Menu App: https://github.com/MichaelAdadey/didiyie</li>        
-    </ul><br>
+       <ul>
+    <li><a href="https://github.com/oswaldamoah/q-mgmt">Queue Management Embedded System</a></li>
+    <li><a href="https://github.com/oswaldamoah/UG-GradeReport">Student Grade Report Web App</a></li>
+    <li><a href="https://github.com/oswaldamoah/expensetracker">Expenses Tracker Web App</a></li>
+    <li><a href="https://github.com/oswaldamoah/shopping-mobileapp">API-Integrated Shopping App</a></li>
+    <li><a href="https://github.com/MichaelAdadey/didiyie">Smart Restaurant Menu App</a></li>
+      </ul>
+     <br>
     <ul>
         
     </ul><br>
