--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
     <h3>Web & Mobile App Development</h3>
     <h4>Volunteer Projects</h4>
     <ul>
-        <li>Member Management Service (MMS) - FFI https://github.com/oswaldamoah/mms</li>
-        <li>Website for UG Department of Computer Science - http://github.com/oswaldamoah/11046928_DCIT_205_IA</li>
+       <li><a href="https://github.com/oswaldamoah/mms">Member Management Service (MMS) - FFI</a></li>
+       <li><a href="http://github.com/oswaldamoah/11046928_DCIT_205_IA">Website for UG Department of Computer Science</a></li>
     </ul>
 
     <h4>Personal Projects</h4>
