--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
             color: #1abc9c;
         }
         ul {
-            list-style-type: none;
+            list-style-type: disc;
             padding-left: 0;
+            padding-bottom: 2px;
         }
         ul.bullet-list {
             list-style-type: disc;
             margin-left: 20px;
+            padding-bottom: 2px;
         }
         li {
             margin-bottom: 5px;
