--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             color: #1abc9c;
         }
         ul {
-            list-style-type: disc;
+            list-style-type: none;
             padding-left: 0;
             padding-bottom: 2px;
         }
         ul.bullet-list {
-            list-style-type: disc;
+            list-style-type: none;
             margin-left: 20px;
             padding-bottom: 2px;
         }
