--- a/index.html
+++ b/index.html
@@ -118,12 +118,10 @@
     <ul> 
         <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS, <br> ASP.NET Core, SQL, AWS, API Development.</li>
         <li><strong>Mobile App Development:</strong> ReactNative</li>
-        <li><strong>Languages:</strong> C#, C++, Python, Javascript, Java</li>
+        <li><strong>Other Languages:</strong> C#, C++, Python, Javascript, Java</li>
         <br>
-        <li><strong>Agile Project Management:</strong> Trello, Jira</li>
-        <li><strong>Microsoft Office Suite:</strong> Word, Excel, PowerPoint, OneDrive</li>
-        <li><strong>Google Workspace:</strong> Docs, Sheets, Slides, Drive</li>
-        <li><strong>Research &amp; Analytical Methods</strong></li>
+        <li><strong>Agile Project Management:</strong> Trello, Jira, Research, Analysis</li>
+        <li><strong>Office Productivity Tools:</strong> Microsoft Office Suite, Google Workspace</li>
     </ul>
 
     <h2>Experience</h2>
@@ -168,9 +166,7 @@
     </ul>
     <h4>Freelance Projects</h4>
     <ul>
-        <li>Shampoo Market Research &amp; Lead Generation (Remote)</li>
-        <li>Amaranth &amp; Squalene Market Research &amp; Lead Generation (Remote)</li>
-        <li>Emancipation Summit Registration Database (Ghana)</li>
+        <li>Cosmetics Market Research &amp; Lead Generation (Remote)</li>
         <li>Cashflow, Invoice &amp; Fuel Logs Management (Ghana)</li>
         <li>Payment Logs &amp; Cash Receipt  Management (Ghana)</li>
     </ul>
@@ -199,7 +195,7 @@
     <h2>Contact</h2>
     <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com" target="_blank">oswaldamoah00@gmail.com</a></p>
     <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswaldamoah" target="_blank">linkedin.com/in/oswaldamoah</a></p>
-    <p class="contact-info"><strong>Portfolio: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
+    <p class="contact-info"><strong>Other: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank">lnk.bio/oswaldamoah</a></p>
 </div>
 </body>
 </html>
