--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 <div class="experience-block">
     <h4>Fullstack Developer - BitByBit Developers <span class="timeline">(2023 - 2024)</span></h4>
-    <p>Collaborated across teams to build MERN stack applications. Developed Specialized Map Routing Service.</p>
+    <p>Collaborated across teams to build applications. Developed Specialized Map Routing Service.</p>
 </div>
 
 <div class="experience-block">
